syntax = "proto3";

package org.ulalax.playhouse.protocol;


message TestMsg{
  string testMsg = 1;
  int32 testNumber = 2;
}

message ApiTestMsg{
  string testMsg = 1;
  int32 testNumber = 2;
}
message ApiTestBeanMsg{
  string testMsg = 1;
  int32 testNumber = 2;
}

message ApiBackendTestMsg{
  string testMsg = 1;
  int32 testNumber = 2;
}
message ApiBackendTestBeanMsg{
  string testMsg = 1;
  int32 testNumber = 2;
}